[package]
name = "inep-ces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["rustls-tls"] }
anyhow = "1"
log = "0.4.17"
env_logger = "0.10.0"
zip = "0.6.4"
md5 = "0.7.0"
